fix spacing for mobile view

--- a/react/indecision-app/src/sass/components/_button.scss
+++ b/react/indecision-app/src/sass/components/_button.scss
@@ -6,7 +6,7 @@
   font-weight: bold;
   font-size: $l-size;
   width: 100%;
-  margin-bottom: $xl-size;
+  margin-bottom: $m-size;
   padding: 2.4rem;
 
   &:disabled {
@@ -30,4 +30,10 @@
   border: none;
   color: $off-white;
   padding: 0;
+}
+
+@media (min-width: 45rem) {
+  .big-button {
+    margin-bottom: $xl-size;
+  }
 }
